# mocktalk

./: .gitignore  LICENSE  README.md  README.rst  requirements-build.txt  requirements.txt  setup.cfg
.github/workflows/: actions.yml
mocktalk/: __init__.py  __main__.py  cli.py  script.py  servers.py  ssh.py  ssh_server.py  telnet.py  telnet_server.py
tests/: test_ssh.py  test_telnet.py
