[metadata]
name = mocktalk
version = 0.0.3
description = Mock telnet and ssh connections in Python
long_description_content_type = text/x-rst
long_description = file: README.md
license = MIT
url = https://github.com/boryszef/mocktalk

[options]
packages = mocktalk
install_requires =
    paramiko
    click

[options.entry_points]
console_scripts =
    mock-talk = mocktalk.cli:cli
